test/error/StForeachArrayStgTypeMismatch.fu
public static class Test
{
	public static bool Run()
	{
		int[3] a;
		foreach (string s in a) { //ERROR: Cannot convert 'int' to 'string'
		}
		return true;
	}
}
